--- a/index.html
+++ b/index.html
@@ -8,33 +8,27 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Added link to the jQuery library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+  <!-- Our own CSS Sheet -->
+  <link rel="stylesheet" href="assets/css/style.css">
   <!-- Added a link to Bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-<style>
-input{
-display:block;
 
-}
 
-</style>   
-  
 </head>
-
-
 
 <body>
 
-  <h1>Press Press Button to Start Trivia Game!</h1> 
-   <div class="text-center">
+  <div id="wrapper">
+    <h1>Totally Sports Trivia!</h1>
+    <div id="sub-wrapper">
+      <div id="random-question">
+        <button id="start">Start</button>
+      </div>
+    </div>
+  </div>
 
-      <button id="random-button" class="btn btn-primary btn-lg">Start</button>
-   
-   </div>
 
-   <div id="random-question"></div>
-  
-  
+
 
   <script type="text/javascript" src="assets/javascript/app.js"></script>
 
